# Radar_SNN_4

./: .gitignore  README.md  build_spike_cache.py  cochlea_explained.py  combined_experiment.py  combined_experiment_small_test.py  dataset_scaling.py  expanded_space_140db_test.py  expanded_space_control_test.py  expanded_space_frontend_diagnostics.py  expanded_space_frontend_gain_diagnostics.py  expanded_space_frontend_gain_no_norm_diagnostics.py  expanded_space_frontend_gain_no_norm_high_diagnostics.py  expanded_space_frontend_no_norm_diagnostics.py  expanded_space_test.py  experiments.py  improve.py  improved_experiments.py  main.py  optuna_study.db  presentation_draft.py  pyproject.toml  round_2_combined_all.py  round_2_experiments.py  round_3_combined_experiments.py  round_3_experiments.py  round_4_combined_experiment.py  round_4_experiments.py  round_5_experiments.py  training_improved_experiments.py
distance_pathway/: README.md
mini_models/: README.md
models/: acoustics.py  experimental_variants.py  pathway_snn.py  round2_variants.py  round3_variants.py  round4_variants.py  snn.py
outputs/: Training_improved_experiments_report.md  cochlea_explained.md  combined_experiment_report.md  combined_experiment_summary.json  current_system_explained.md  current_working_model_detailed.md  dataset_scaling.md  dataset_scaling_summary.json  expanded_space_control_test_report.md  expanded_space_control_test_summary.json  expanded_space_test_140db_unnormalized_report.md  expanded_space_test_140db_unnormalized_summary.json  expanded_space_test_report.md  experiment_report.md  (+23 more)
(+191 files in other folders)
